Source/WebCore: Link headers for subresources are not being processes https://bugs.webkit.org/show_bug.cgi?id=181789

Reviewed by Youenn Fablet.

Triggers Link header processing when the Link headers arrive on a subresource.

Test: http/tests/preload/link-header-on-subresource.html

* loader/LinkLoader.cpp:
(WebCore::LinkLoader::loadLinksFromHeader): Change the media check conditions.
* loader/LinkLoader.h: Add a third state for media checks.
* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::didReceiveResponse): Preload links from headers for subresources.

LayoutTests:
Link headers for subresources are not being processed
https://bugs.webkit.org/show_bug.cgi?id=181789

Reviewed by Youenn Fablet.

Adds tests to make sure Link headers on subresources are being processed.

* http/tests/preload/link-header-on-subresource-expected.txt: Added.
* http/tests/preload/link-header-on-subresource.html: Added.
* http/tests/preload/resources/dummy-preloads-subresource.css.php: Added.


Canonical link: https://commits.webkit.org/198979@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229196 268f45cc-cd09-0410-ab3c-d52691b4dbfc